# postgresql-binary

./: .gitignore  .travis.yml  CHANGELOG.md  cabal.project  flake.nix  libpq-binary.cabal  postgresql-binary.cabal  stack.yaml  step1.ticky  step2.ticky  step3.ticky
.github/workflows/: build-and-test.yaml  format-and-test.yaml  on-push-to-release.yaml  release.yaml
decoding/: Main.hs
encoding/: Main.hs
executables/: Decoding.hs  Encoding.hs  Tests.hs
tasty/: Main.hs
tasty/Main/: Apx.hs  Composite.hs  DB.hs  Gens.hs  IO.hs  PTI.hs  Prelude.hs  Properties.hs  TextEncoder.hs
tests/: Main.hs
tests/LibpqBinary/: PTI.hs
tests/PostgreSQLBinary/: PTI.hs
