name:
  postgresql-binary
version:
  0.12.4.3
synopsis:
  Encoders and decoders for the PostgreSQL's binary format
description:
  An API for dealing with PostgreSQL's binary data format.
  .
  It can be used to implement performant bindings to Postgres.
  E.g., <http://hackage.haskell.org/package/hasql hasql>
  is based on this library.
  .
  It supports all Postgres versions starting from 8.3 
  and is tested against 8.3, 9.3 and 9.5
  with the @integer_datetimes@ setting off and on.
category:
  PostgreSQL, Database, Codecs, Parsing
homepage:
  https://github.com/nikita-volkov/postgresql-binary 
bug-reports:
  https://github.com/nikita-volkov/postgresql-binary/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/postgresql-binary.git

library
  hs-source-dirs:
    library
  ghc-options:
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    PostgreSQL.Binary.Decoding
    PostgreSQL.Binary.Encoding
    PostgreSQL.Binary.Data
  other-modules:
    PostgreSQL.Binary.Encoding.Builders
    PostgreSQL.Binary.Prelude
    PostgreSQL.Binary.Integral
    PostgreSQL.Binary.Interval
    PostgreSQL.Binary.Numeric
    PostgreSQL.Binary.Time
    PostgreSQL.Binary.Inet
    PostgreSQL.Binary.BuilderPrim
  build-depends:
    aeson >=2 && <3,
    base >=4.12 && <5,
    binary-parser >=0.5.7 && <0.6,
    bytestring >=0.10.4 && <0.12,
    bytestring-strict-builder >=0.4.5.4 && <0.5,
    containers >=0.5 && <0.7,
    network-ip >=0.3 && <0.4,
    scientific >=0.3 && <0.4,
    text >=1.2 && <3,
    time >=1.9 && <2,
    transformers >=0.3 && <0.7,
    unordered-containers ==0.2.*,
    uuid ==1.3.*,
    vector >=0.12 && <0.13

-- This test-suite must be executed in a single-thread.
test-suite tasty
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tasty
  main-is:
    Main.hs
  other-modules:
    Main.TextEncoder 
    Main.DB
    Main.Apx
    Main.IO
    Main.Gens
    Main.PTI
    Main.Properties
    Main.Prelude
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    aeson,
    conversion ==1.*,
    conversion-bytestring ==1.*,
    conversion-text ==1.*,
    json-ast ==0.3.*,
    network-ip >=0.2 && <1,
    postgresql-binary,
    postgresql-libpq ==0.9.*,
    QuickCheck >=2.10 && <3,
    quickcheck-instances >=0.3.22 && <0.4,
    rerebase >=1.10.0.1 && <2,
    tasty >=1.4 && <2,
    tasty-hunit >=0.10 && <0.11,
    tasty-quickcheck >=0.10 && <0.11

benchmark encoding
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    encoding
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    criterion >=1.5.9 && <2,
    postgresql-binary,
    rerebase >=1.10.0.1 && <2

benchmark decoding
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    decoding
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    criterion >=1.5.9 && <2,
    postgresql-binary,
    rerebase >=1.10.0.1 && <2
