cabal-version:      3.0
name:               postgresql-binary
version:            0.14
synopsis:           Encoders and decoders for the PostgreSQL's binary format
description:
  An API for dealing with PostgreSQL's binary data format.
  .
  It can be used to implement performant bindings to Postgres.
  E.g., <http://hackage.haskell.org/package/hasql hasql>
  is based on this library.
  .
  It supports all Postgres versions starting from 8.3 
  and is tested against 8.3, 9.3 and 9.5
  with the @integer_datetimes@ setting off and on.

category:           PostgreSQL, Database, Codecs, Parsing
homepage:           https://github.com/nikita-volkov/postgresql-binary 
bug-reports:        https://github.com/nikita-volkov/postgresql-binary/issues 
author:             Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:         Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:          (c) 2014, Nikita Volkov
license:            MIT
license-file:       LICENSE
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/nikita-volkov/postgresql-binary.git

common base
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    NoMonomorphismRestriction
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    UnboxedTuples

library
  import:          base
  hs-source-dirs:  library
  ghc-options:     -funbox-strict-fields
  exposed-modules:
    PostgreSQL.Binary.Decoding
    PostgreSQL.Binary.Encoding

  other-modules:
    PostgreSQL.Binary.BuilderPrim
    PostgreSQL.Binary.Encoding.Builders
    PostgreSQL.Binary.Inet
    PostgreSQL.Binary.Integral
    PostgreSQL.Binary.Interval
    PostgreSQL.Binary.Numeric
    PostgreSQL.Binary.Prelude
    PostgreSQL.Binary.Time

  build-depends:
    , aeson >=2 && <3
    , base >=4.12 && <5
    , binary-parser >=0.5.7 && <0.6
    , bytestring >=0.10.4 && <0.13
    , bytestring-strict-builder >=0.4.5.4 && <0.5
    , containers >=0.5 && <0.8
    , iproute >=1.7 && <2
    , scientific >=0.3 && <0.4
    , text >=1.2 && <3
    , time >=1.9 && <2
    , transformers >=0.3 && <0.7
    , unordered-containers >=0.2 && <0.3
    , uuid >=1.3 && <1.4
    , vector >=0.12 && <0.14

-- This test-suite must be executed in a single-thread.
test-suite tasty
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: tasty
  main-is:        Main.hs
  other-modules:
    Main.Apx
    Main.Composite
    Main.DB
    Main.Gens
    Main.IO
    Main.Prelude
    Main.Properties
    Main.PTI
    Main.TextEncoder

  build-depends:
    , aeson >=2 && <3
    , iproute >=1.4 && <2
    , postgresql-binary
    , postgresql-libpq >=0.9 && <0.11
    , QuickCheck >=2.10 && <3
    , quickcheck-instances >=0.3.22 && <0.4
    , rerebase >=1.20.1.1 && <2
    , tasty >=1.4 && <2
    , tasty-hunit >=0.10 && <0.11
    , tasty-quickcheck >=0.10 && <0.11

benchmark encoding
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: encoding
  main-is:        Main.hs
  ghc-options:    -O2 -threaded -with-rtsopts=-N -funbox-strict-fields
  build-depends:
    , criterion >=1.5.9 && <2
    , postgresql-binary
    , rerebase >=1.20.1.1 && <2

benchmark decoding
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: decoding
  main-is:        Main.hs
  ghc-options:    -O2 -threaded -with-rtsopts=-N -funbox-strict-fields
  build-depends:
    , criterion >=1.5.9 && <2
    , postgresql-binary
    , rerebase >=1.20.1.1 && <2
